# paper-translator

./: .gitignore  README.md  main.py  pyproject.toml
modules/: builder.py  evaluator.py  extractor.py  translator.py
tests/: test_font.py  test_wrap.py
