[project]
name = "pdf-translator"
version = "0.1.0"
description = "学術論文PDFのレイアウト維持翻訳ツール"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf",
    "google-genai",
    "python-dotenv",
    "pdf2docx>=0.5.12",
    "python-docx>=1.2.0",
    "docx2pdf>=0.1.8",
    "pymupdf4llm>=1.27.2.1",
]

[tool.uv]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]
